# proxmox

./: .gitignore  .gitleaksignore  .sops.yaml  .terraform.lock.hcl  Makefile  Pulumi.yaml  README.md  Taskfile.yml  __main__.py  age.pub  main.tf  node_config.tf  outputs.tf  providers.tf  pyproject.toml  terraform.tfvars.enc  variables.tf
.github/: dependabot.yml
.github/workflows/: pulumi-preview.yml  pulumi-up.yml  repo-infra-scan.yml  terraform-ci.yml
adguard/: .terraform.lock.hcl  adguard.tf  terraform.tfvars.enc  variables.tf  versions.tf
cloudflare/: Pulumi.production.yaml  Pulumi.yaml  Taskfile.yml  __main__.py  pyproject.toml
docs/: README.md
homelab/: .terraform.lock.hcl  acme.tf  adguard.tf  bootstrap.tf  locals.tf  outputs.tf  providers.tf  terraform.tfvars.enc  terraform.tfvars.example  variables.tf  versions.tf  workloads.tf
modules/adguard_config/: main.tf  variables.tf  versions.tf
modules/portainer/: main.tf  variables.tf
modules/proxmox_apt/: main.tf  variables.tf
modules/proxmox_containers/: AdGuardHome-test.yaml  AdGuardHome.yaml  main.tf  variables.tf
modules/proxmox_containers/templates/: adguard-bootstrap.yaml.tftpl
modules/proxmox_network/: main.tf  outputs.tf  variables.tf
modules/proxmox_pools/: main.tf  outputs.tf
modules/proxmox_users/: main.tf  variables.tf
modules/proxmox_vms/: flatcar.tf  flatcar.yml  main.tf  portainer-init.yml  portainer_cluster.tf  variables.tf  windows.tf
proxmox/: Pulumi.production.yaml  README.md  __main__.py  pyproject.toml  stack_inventory.py
proxmox/files/templates/: portainer-cloud-init.yml  portainer-compose.yml
proxmox/homelab/: __init__.py  production.py  provider.py  settings.py  stacks.py
proxmox/proxmox_components/: __init__.py  adguard_config_renderer.py  base.py  containers.py  debian_lxc_template.py  foundation.py  helpers.py  lxc.py  network.py  performance.py  portainer.py  users.py  vm.py
proxmox_components/: __init__.py  adguard_config_renderer.py  apt.py  containers.py  debian_lxc_template.py  enums.py  foundation.py  helpers.py  lxc.py  network.py  users.py  vm.py
